# humanoid_robotic_systems

./: README.md
src/mazeLine/: CMakeLists.txt  package.xml
src/mazeLine/src/: main.cpp  main.cpp~
src/mazeLine/srv/: next_step.srv  next_step.srv~
src/nao_control_tutorial_3/: CMakeLists.txt  package.xml~
src/nao_control_tutorial_3/launch/: nao.launch~  naoFrancisco.launch  naoFrancisco.launch~
src/nao_control_tutorial_3/script/: grab_ball.py  handover_ball.py  track_service.py
src/nao_control_tutorial_3/src/: main.cpp
src/nao_control_tutorial_3/srv/: GrabBall.srv~  HandOverBall.srv  TrackBall.srv  TrackBall.srv~
src/planner/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/planner/launch/: nao.launch  nao.launch~
src/planner/script/: Header.txt  change_posture_service.py  distance_cam_foot.py  move_to_service.py  pos_aruco_floor_service.py
src/planner/src/: main.h
src/planner/srv/: ChangePosture.srv~  DistanceCamFoot.srv  DistanceCamFoot.srv~  DistanceCamFoot_old.srv  MoveTo.srv  PosArucoFloor.srv~
src/robot_specific_msgs/: package.xml
src/tutorial_6/: CMakeLists.txt  clf.sav  package.xml
src/tutorial_6/launch/: nao.launch
src/tutorial_6/script/: move_service.py
src/tutorial_6/src/: main.cpp  main.cpp~
src/tutorial_6/srv/: NaoFace.srv  RoiFace.srv
